include_directories(${CMAKE_SOURCE_DIR}/include)

#查找libevent依赖包
FIND_PACKAGE(LIBEVENT REQUIRED)
IF(LIBEVENT_FOUND)
	include_directories(${LIBEVENT_INCLUDE_DIR})
	LINK_DIRECTORIES(${LIBEVENT_LIBRARY_DIR})
ELSE(LIBEVENT_FOUND)
	message(FATAL_ERROR "libevent not found!")
ENDIF(LIBEVENT_FOUND)

#扫描文件
AUX_SOURCE_DIRECTORY(. CURRENT_SRC_LIST)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE(httpd ${CURRENT_SRC_LIST})

target_link_libraries(httpd event event_core)

